--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <title>New Thing</title>
   <link rel="stylesheet" href="css/app.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>New Thing</title>
 </head>
 <body>
-  {{ content }}
+  
+  <div class="container">
+    {{ content }}
+  </div>
+  
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="js/components.js"></script>
   <script src="js/app.js"></script>
 
