--- a/less/app.less
+++ b/less/app.less
@@ -1,18 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Oswald);
-
-@bootstrap: '../bower_components/bootstrap/less/';
-@import '@{bootstrap}/bootstrap.less';
+@bootstrap: '../bower_components/bootstrap';
+@import '@{bootstrap}/less/bootstrap.less';
 
 @import '_variables';
-@import '_type';
-
-html, body {
-  background-color: @site-bg;
-  font-family: @body-font;
-  color: @dark-text;
-  font-size: 14px;
-
-  @media (min-width: @screen-sm-min) { 
-    font-size: 20px;
-  }
-}
+@import '_bootswatch';
